apps/tencentcloud/jenkins/release/prod/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: controller
  namespace: jenkins
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - "${INGRESS_HOST}"
  rules:
    - backendRefs:
        - name: jenkins
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: "${INGRESS_PATH}"
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - X-Frame-Options
              - Cross-Origin-Opener-Policy
              - Content-Security-Policy
